--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Nunito+Sans:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>GitSearch</title>
   </head>
